--- a/pharmacy.html
+++ b/pharmacy.html
@@ -5,284 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHARMACY</title>
-    <!-- <link rel="stylesheet" href="pharmacy.css"> -->
+    <link rel="stylesheet" href="pharmacy.css">
     <script src="pharmacy.js"></script>
-
-    <style>
-        * {
-    box-sizing: border-box;
-}
-
-body {
-    padding: 0;
-    margin: 0;
-}
-/* header design  */
-header {
-    display: flex;
-    background-color: rgba(30, 143, 255, 0.894);
-    justify-content: space-between;
-    width: 100%;
-}
-
-.left_header {
-    width: 80%;
-}
-
-.right_header {
-    width: 10%;
-    /* display: flex; */
-}
-.logo {
-    height: 50px;
-    width: 10%;
-}
-
-.logo img {
-    height: 90px;
-    width: 100%;
-}
-
-header ul {
-    display: flex;
-    list-style-type: none;
-}
-
-header ul a {
-    text-decoration: none;
-    padding: 7px;
-    color: black;
-    font-size: larger;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-header ul a:hover {
-    background-color: rgb(5, 110, 215);
-    color: white;
-}
-
-.right_header {
-    width: 10%;
-    margin-right: 20px;
-}
-
-.right_header button a {
-    color: black;
-
-    text-decoration: none;
-    font-size: large;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.right_header button {
-    width: 100%;
-    padding: 10px;
-    margin: 15px 0;
-    border: 1px solid rgb(155, 158, 163);
-    border-radius: 10px;
-}
-
-.right_header button:hover {
-    background-color: rgb(5, 110, 215);
-    color: white;
-}
-
-.right_header button a:hover {
-    color: white;
-} 
-/* text area design  */
-.title_area {
-    margin-top: 100px;
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-} 
-
-.title_area p {
-    color: navy;
-    font-weight: 50px;
-    font-size: larger;
-    margin-top: 0;
-}
-
-/* tablets design  */
-.tab1_container, .tab2_container {
-    width: 100%;
-    display: flex;
-    margin-top: 50px;
-}
-
-.tab1_container .tab_box {
-    width: 25%;
-    border: 1px solid #ccc;
-    box-shadow: 6px 6px 10px gray;
-    margin: 0 40px;
-}
-.tab2_container .tab_box {
-    width: 25%;
-    border: 1px solid #ccc;
-    box-shadow: 6px 6px 10px gray;
-    margin: 0 30px;
-}
-
-.tab_box img {
-    width: 100%;
-    border-bottom: 1px solid rgb(232, 229, 229);
-}
-
-.tab_box img:hover {
-    opacity: 0.6;
-}
-
-.tab_content {
-    text-align: center;
-    margin-top: 10px;
-}
-.tab_content a {
-    text-decoration: none;
-    color: navy;
-    font-size: large;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.tab_content a:hover {
-    opacity: 0.6;
-}
-
-.tab_content del {
-    color: goldenrod;
-}
-
-.tab_content button {
-    width: 50%;
-    padding: 10px;
-    background-color: #edf3f3;
-    border: 1px solid navy;
-    border-radius: 5px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-.tab_content button:hover {
-    background-color: #b7d0d0;
-    color: white;
-}
-
-/* footer design  */
-footer {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(49, 149, 249, 0.931);
-    margin-top: 100px;
-}
-
-.info {
-    width: 100%;
-    display: flex;
-}
-
-.about, .resource, .contact, h4 {
-    text-align: center;
-    color: white;
-    font-size: medium;
-    text-align: left;
-}
-.about, .resource, .contact {
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-}
-.about, .resource, .contact, a {
-    text-decoration: none;
-    color: white;
-    font-size: small;
-    /* background-color: blue; */
-    text-align: left;
-    justify-content: center;
-}
-
-.about, .resource, .contact, a:hover {
-    color: black;
-}
-
-.about {
-    margin-left: 50px;
-}
-
-.update {
-    width: 40%;
-    margin-right: 0;
-}
-.update p {
-    color: white;
-    font-size: small;
-}
-
-.update input {
-    padding: 3px;
-}
-.update button {
-    background-color: rgb(15, 15, 238);
-    border: 1px solid #ccc;
-    padding: 3px;
-    color: #ccc;
-}
-
-.update button:hover {
-    background-color: rgb(22, 95, 230);
-    color: white;
-}
-
-.end {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.terms {
-    margin-left: 50px;
-}
-
-.me p {
-    color: white;
-    font-size: small;
-    margin-right: 90px;
-    line-height: 3px;
-}
-
-.body_hr {
-    margin-top: 80px;
-}
-
-/* resulotion for another devices  */
-@media screen and (max-width: 600px) {
-    .logo img {
-        height: 232px;
-    }
-    .left_header ul {
-        display: flex;
-        flex-direction: column;
-    }
-    .right_header {
-        width: 20%;
-    }
-    .tab1_container, .tab2_container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-   .tab_box button {
-       width: 100%;
-   }
-   .info {
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-   }
-.about {
-    margin: 0;
-}
-.me p {
-    margin-top: 0;
-}
-}
-    </style>
-
 </head>
 <body>
     <header>
@@ -292,10 +16,10 @@ footer {
         <div class="left_header">
             <ul>
                 <a href="pharmacy.html">Medicines</a>
-                <!-- <a href="capsule.html">Capsules</a>
+                <a href="capsule.html">Capsules</a>
                 <a href="syrup.html">Syrups</a>
                 <a href="ointment.html">Ointments</a>
-                <a href="injection.html">Injections</a> -->
+                <a href="injection.html">Injections</a>
             </ul>
         </div>
          <div class="right_header">
